# Where-Winds-Meet-Midi-Player

./: README.md  package.json
.claude/: settings.local.json
.github/workflows/: build.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: keyboard.rs  main.rs  midi.rs  scanner.rs  state.rs
src/lib/components/: FavoritesView.svelte  MidiFileList.svelte  PlaybackControls.svelte  PlaylistManager.svelte  SavedPlaylistsView.svelte  SettingsView.svelte  Timeline.svelte
src/lib/stores/: player.js
