[package]
name = "wwm-overlay"
version = "0.1.0"
description = "MIDI Player Overlay for Black Desert"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
midly = "0.5"
enigo = "0.2"
lazy_static = "1.4"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }
tauri-plugin-dialog = "2.4.2"
xcap = "0.0.14"
image = "0.25"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "wwm-overlay"
path = "src/main.rs"
